2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook): Use defvar.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-time-stamp-format): Includes timezone info.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* TODO: New file.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-faces): Group of faces used by BBDB.
	(bbdb-name, bbdb-organization, bbdb-field-name): New faces.
	(bbdb-display-name-organization, bbdb-display-record-one-line)
	(bbdb-display-record-multi-line): Use them.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-mode-map): Inherit from special-mode-map.
	(bbdb-quit-window): Renamed from bbdb-bury-buffer.  Use
	quit-window.
	(bbdb-mode):  Use define-derived-mode.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-indent-string): New function.
	(bbdb-display-record-multi-line): Use it.  (Bug#33101)

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el:  Autoload browse-url-url-at-point.

2011-04-16  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-create-hook, bbdb-change-hook):  Call
	add-hook for the default hook functions.

2011-04-11  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-com.el (bbdb-complete-mail): Ensure initialization of
	the database.

2011-04-10  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-utilities-anniv): New customization group.
	(bbdb-create-hook, bbdb-change-hook)
	(bbdb-after-change-hook, bbdb-notice-hook)
	(bbdb-default-separator): Improve doc string.
	(bbdb-separator-alist): Improve doc string.  Include entries for
	anniversaries.
	(bbdb-records):  Use make-variable-buffer-local.
	(bbdb-current-field):  Do not remove field-name.
	(bbdb-record-note): Simplified.
	(bbdb-record-note-n): Removed.
	(bbdb-record-note-split): New function.
	(bbdb-record-set-note): Improved documentation.
	(bbdb-format-note, bbdb-record-format-note): New function.